# envdiff

./: .gitignore  README.md  setup.cfg
envdiff/: annotator.py  auditor.py  classifier.py  cli.py  cli_annotate.py  cli_classify.py  cli_diff.py  cli_duplicate.py  cli_export.py  cli_group.py  cli_normalize.py  cli_patch.py  cli_pin.py  cli_rename.py  cli_score.py  cli_snapshot.py  cli_stack.py  cli_stats.py  cli_summarize.py  cli_tag.py  cli_template.py  cli_trace.py  comparator.py  comparator_stats.py  deprecator.py  differ.py  duplicator.py  exporter.py  filter.py  grouper.py  interpolator.py  linter.py  masker.py  merger.py  normalizer.py  parser.py  patcher.py  pinner.py  pipeline.py  profiler.py  (+15 more)
tests/: test_annotator.py  test_auditor.py  test_classifier.py  test_cli.py  test_cli_classify.py  test_cli_group.py  test_cli_normalize.py  test_cli_patch.py  test_cli_rename.py  test_cli_stats.py  test_cli_summarize.py  test_cli_tag.py  test_cli_template.py  test_cli_trace.py  test_comparator.py  test_comparator_stats.py  test_deprecator.py  test_differ.py  test_duplicator.py  test_exporter.py  test_filter.py  test_grouper.py  test_interpolator.py  test_linter.py  test_masker.py  test_merger.py  test_normalizer.py  test_parser.py  test_patcher.py  test_pinner.py  test_profiler.py  test_pruner.py  test_redactor.py  test_renamer.py  test_reporter.py  test_scorer.py  test_snapshot.py  test_sorter.py  test_stacker.py  test_stripper.py  (+7 more)
