[metadata]
name = envdiff
version = 0.1.0
description = Compare .env files across environments and flag missing or mismatched keys with optional secret masking.
long_description = file: README.md
long_description_content_type = text/markdown
author = envdiff contributors
license = MIT
python_requires = >=3.8
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = .

[options.entry_points]
console_scripts =
    envdiff = envdiff.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 99
exclude = .git,__pycache__,.venv
